Email serch finish

--- a/index.html
+++ b/index.html
@@ -10,12 +10,24 @@
     <script src="https://kit.fontawesome.com/43ebce74f3.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="./css/app.css">
-    <title>-</title>
+    <title>js-Mail and Dadi</title>
   </head>
 
 
   <body>
-      
+      <div class="container email-container">
+        <div class="mb-3">
+          <label for="input-email" class="form-label">Email</label>
+          <input type="email" class="form-control" id="input-email" aria-describedby="emailHelp" placeholder="Cerca la tua mail...">
+        </div>
+
+        <button type="submit" id="button-email" class="btn btn-dark">Submit</button>
+        <div id="reselt-search-email"></div>
+      </div>
+
+      <div class="container dadi-container">
+
+      </div>
 
 
 
