--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
           <label for="input-email" class="form-label">Email</label>
           <input type="email" class="form-control" id="input-email" aria-describedby="emailHelp" placeholder="Cerca la tua mail...">
         </div>
-
-        <button type="submit" id="button-email" class="btn btn-dark">Submit</button>
-        <div id="reselt-search-email"></div>
+        <div id="result-search-email">
+          <button type="submit" id="button-email" class="btn btn-dark">Submit</button>
+        </div>
       </div>
 
-      <div class="container dadi-container">
-
+      <div id="dice-container" class="container dadi-container mt-5">
+        <button type="submit" id="button-dice" class="btn btn-danger d-block">Tira i dadi</button>
       </div>
 
 
