--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         <div class="mb-3">
           <label for="input-email" class="form-label">Email</label>
           <input type="email" class="form-control" id="input-email" aria-describedby="emailHelp" placeholder="Cerca la tua mail...">
+          <button type="submit" id="button-email" class="btn btn-dark mt-3">Submit</button>
         </div>
         <div id="result-search-email">
-          <button type="submit" id="button-email" class="btn btn-dark">Submit</button>
         </div>
       </div>
 
+      <button type="submit" id="button-dice" class="btn btn-danger d-block">Tira i dadi</button>
       <div id="dice-container" class="container dadi-container mt-5">
-        <button type="submit" id="button-dice" class="btn btn-danger d-block">Tira i dadi</button>
       </div>
 
 
